# meds-mcp

./: .env.example  .gitignore  README.md  debug_cohort_chat_messages_20260226_092211_0.json  debug_cohort_chat_messages_20260226_092212_0.json  pyproject.toml  run_tests.sh  test_mcp_client_sdk.py
configs/: dev.yaml  ehrshot.yaml  local.yaml  medalign.yaml  vista.yaml  vista_bench_thoracic_cohort_lumia.yaml
configs/prompts/: vignette_prompt.example.txt  vignette_prompt_EHRSHOT.txt  vignette_prompt_VISTA.txt  vignette_prompt_generic.txt
data/: .gitignore
data.ms/: instance-uid
data.ms/auth/: data.mdb  lock.mdb
data.ms/tasks/: data.mdb  lock.mdb
docs/: ehrshot_experiment.md  faceted_search_api.md  filtered_queries_guide.md  graph_storage_optimization.md  ontology_relationships.md  ontology_representation_options.md  roadmap.md  vista_bench_experiment.md
examples/mcp_chat_demo/: demo.py  evidence_review_demo.py  react_chat_demo.py
examples/mcp_chat_demo/chat/: __init__.py
examples/mcp_chat_demo/chat/config/: __init__.py
examples/mcp_chat_demo/chat/core/: patient.py  session.py
examples/mcp_chat_demo/chat/llm/: cache.py  chat.py  secure_llm_client.py
examples/mcp_chat_demo/chat/mcp_client/: client.py
examples/mcp_chat_demo/chat/ui/: QUICKSTART.md  README_REACT.md  components.py  react_index.html  react_index_single_patient.html  react_server.py  run_react_app.py
examples/mcp_chat_demo/chat/utils/: tokens.py  vpn_check.py
examples/mcp_chat_demo/chat/visualization/: timeline.py  viz.py
experiments/: __init__.py
experiments/fewshot_with_labels/: README.md  _paths.py  _tokens.py  analyze_batch_results.py  analyze_results.py  analyze_schema_vs_data.py  batch_predict_vignettes.py  build_all_ehrshot_cohorts.py  build_cohort.py  build_ehrshot_cohort.py  build_reason_cache.py  lumia_filter.py  make_readmission_baseline_report.py  plot_balanced_accuracy.py  plot_token_bars.py  precompute_vignettes.py  precompute_vignettes_vertex_batch.py  reingest_batch.py  run_batch_full.py  run_experiment.py  run_experiment_batch.py  run_experiment_vertex_batch.py  run_lumia_100pt.sh  run_lumia_context_lengths.sh  run_lumia_experiment_vertex_batch.py  run_lumia_parallel_batch.py  run_readmission_100pt.sh  run_readmission_ehrshot_vertex.sh  run_readmission_vertex.sh  sample_pool.py  show_prompt.py  show_vignette_prompt.py  update_readmission_report.py
experiments/fewshot_with_labels/batch_jobs/20260501_071711/: batch_manifest.jsonl
experiments/fewshot_with_labels/batch_jobs/20260501_071857/: batch_manifest.jsonl
experiments/progression_subset/: README.md  __init__.py  analyze_results.py  bm25_retrieval.py  precompute_vignettes.py  run_experiment.py  sample_cohort.py  timeline.py
experiments/progression_subset/outputs/: sample_manifest.json  sampled_rows.csv  vignettes_meta.json
scripts/: README.md  analyze_context_lengths.py  analyze_minimal_llm_only.py  analyze_relationship_types.py  analyze_vista_bench_results.py  benchmark_ontology_loading.py  bigquery_table.py  compare_graph_formats.py  create_labels_100_from_splits.py  debug_context.py  debug_structured_output_response.py  demo_filtered_queries.py  diag_embed_before_xml.py  diagnose_ontology_relationships.py  download_data.py  explore_ontology_paths.py  generate_embeddings_from_xml.py  index_patients.py  materialize_paths.py  plot_context_analysis.py  plot_vignette_word_dist.py  precompute_context_cache.py  precompute_single_visit_events.py  rebuild_ontology_with_isa.py  rebuild_sparse_graph.py  run_minimal_llm_only.py  run_vista_bench_all_flip_levels.py  run_vista_bench_experiment.py  rxnorm_min_graph.yaml  sample_task_labels.py  setup_gcp_and_run.py  setup_vm.sh  similarity_retrieval_workflow_demo.py  simplified_workflow_demo.py  summarize_ontology.py  test_filtered_queries.py  test_mcp_client_sdk.py  test_ontology_queries.py  test_securellm_logprobs.py  test_splits.ipynb  (+1 more)
scripts/ontology_benchmarks/: ontology_benchmarks.py  quick_speed_comparison.py
src/meds_mcp/experiments/: __init__.py  formatters.py  task_config.py
src/meds_mcp/experiments/minimal_LLM_only/: README.md  __init__.py  run.py
src/meds_mcp/server/: globals.py  main.py  tools.py
src/meds_mcp/server/api/: cohort_chat.py  faceted_search.py
src/meds_mcp/server/indexing/: index_patients.py
src/meds_mcp/server/llm/: __init__.py  secure_llm_client.py
src/meds_mcp/server/rag/: context_formatter.py  mongodb_storage.py  retrievers.py  simple_example.py  simple_storage.py  storage.py  visit_filter.py
src/meds_mcp/server/tools/: __init__.py  athena.py  calculator.py  fast_ontology.py  meilisearch_client.py  meilisearch_tools.py  ontologies.py  readmission.py  search.py  sparse_graph_ontology.py  task_tools.py
src/meds_mcp/similarity/: __init__.py  bm25_retrieval.py  candidates.py  cohort.py  deterministic_linearization.py  embeddings.py  llm_secure_adapter.py  lumia.py  pipeline.py  rerank_llm.py  retrieval.py  task_retriever.py  vignette_base.py  vignette_deterministic.py  vignette_llm.py
src/meds_mcp/utils/: patient.py  xml_loader.py
tests/: conftest.py  test_athena_ontologies.py  test_context_formatter.py  test_csv_loader.py  test_deterministic_linearization.py  test_meilisearch.py  test_retrieval_e2e.py  test_similarity_pipeline.py  test_task_aware_retriever.py  test_tool_calling.py  test_vignette_deterministic.py  test_vignette_llm.py  test_vignette_quality.py
