[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Jason Alan Fries", email = "jfries@stanford.edu"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "MEDS (medical event data standard) MCP server with fast querying capabilities"
keywords = ["medical", "ontology", "mcp", "healthcare", "terminology"]
license = {text = "MIT"}
name = "meds-mcp"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
  "mcp>=1.0.0",
  "matplotlib>=3.7.0",
  "numpy>=1.24.0",
  "polars>=0.20.0",
  "pyarrow>=12.0.0",
  "networkx>=3.0",
  "python-dotenv>=1.0.0",
  "gdown>=4.0.0",
  "gradio>=4.0.0",
  "securellm @ git+ssh://git@github.com/VISTA-Stanford/secure-llm.git",
  "pymongo>=4.5.0",
  "llama-index>=0.9.0",
  "llama-index-storage-docstore-mongodb>=0.1.0",
  "llama-index-storage-index-store-mongodb>=0.1.0",
  "llama-index-llms-openai>=0.1.0",
  "llama-index-retrievers-bm25>=0.1.0",
  "PyYAML>=6.0.0",
  "lxml>=4.9.0",
]

[project.optional-dependencies]
search = [
  "bm25s>=0.2.0",
  "PyStemmer>=2.2.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
]

test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

docs = [
  "sphinx>=6.0.0",
  "sphinx-rtd-theme>=1.3.0",
  "myst-parser>=1.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/yourusername/meds-mcp/issues"
Documentation = "https://meds-mcp.readthedocs.io"
Homepage = "https://github.com/yourusername/meds-mcp"
Repository = "https://github.com/yourusername/meds-mcp"

[project.scripts]
meds-mcp = "meds_mcp.server.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/meds_mcp"]

[tool.black]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.isort]
known_first_party = ["meds_mcp"]
line_length = 88
multi_line_output = 3
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
python_version = "3.10"
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "polars.*",
  "pyarrow.*",
  "networkx.*",
]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --strict-config"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
minversion = "7.0"
python_classes = ["Test*"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "*/tests/*",
  "*/test_*",
  "*/__pycache__/*",
]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.ruff]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]
line-length = 88
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]
